Enhance topic modeling functionality by adding a new command for topic modeling in the makefile and updating the main.py to support structured output for topics. Introduce spaCy for language processing and improve document segment handling. Update dependencies in pyproject.toml and add a new topics.json file for structured topic storage. Modify tests to reflect changes in topic assignment and ensure proper integration with the updated document processing flow.

--- a/knowledge-base/structured-knowledge-base/documents/centerpartiet-valmanifest-2022.json
+++ b/knowledge-base/structured-knowledge-base/documents/centerpartiet-valmanifest-2022.json
@@ -1548,7 +1548,7 @@
         -0.02075282484292984,
         0.002966235624626279
       ],
-      "topic_id": null
+      "topic_id": 9
     },
     {
       "id": "8-1",
@@ -3095,7 +3095,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "8-2",
@@ -4642,7 +4642,7 @@
         -0.041676998138427734,
         -0.023217907175421715
       ],
-      "topic_id": null
+      "topic_id": 9
     },
     {
       "id": "8-3",
@@ -6189,7 +6189,7 @@
         -0.03782970458269119,
         -0.012254409492015839
       ],
-      "topic_id": null
+      "topic_id": 5
     },
     {
       "id": "8-4",
@@ -7736,7 +7736,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "8-5",
@@ -9283,7 +9283,7 @@
         -0.028149520978331566,
         -0.019877513870596886
       ],
-      "topic_id": null
+      "topic_id": 9
     },
     {
       "id": "8-6",
@@ -10830,7 +10830,7 @@
         -0.019109847024083138,
         -0.009783463552594185
       ],
-      "topic_id": null
+      "topic_id": 9
     },
     {
       "id": "8-7",
@@ -12377,7 +12377,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "8-8",
@@ -13924,7 +13924,7 @@
         -0.03452743589878082,
         -0.0049710702151060104
       ],
-      "topic_id": null
+      "topic_id": 9
     },
     {
       "id": "8-9",
@@ -15471,7 +15471,7 @@
         -0.029152879491448402,
         0.00992914941161871
       ],
-      "topic_id": null
+      "topic_id": -1
     },
     {
       "id": "8-10",
@@ -17018,7 +17018,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "8-11",
@@ -18565,7 +18565,7 @@
         -0.019174236804246902,
         0.004183425568044186
       ],
-      "topic_id": null
+      "topic_id": -1
     },
     {
       "id": "8-12",
@@ -20112,7 +20112,7 @@
         -0.014175503514707088,
         0.03194047138094902
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "8-13",
@@ -21659,7 +21659,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "8-14",
@@ -23206,7 +23206,7 @@
         -0.012784155085682869,
         0.003894250374287367
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "8-15",
@@ -24753,7 +24753,7 @@
         -0.026868529617786407,
         0.024581436067819595
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "8-16",
@@ -26300,7 +26300,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "8-17",
@@ -27847,7 +27847,7 @@
         -0.006311303004622459,
         0.013600555248558521
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "8-18",
@@ -29394,7 +29394,7 @@
         -0.016204921528697014,
         0.0192378219217062
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "8-19",
@@ -30941,7 +30941,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "8-20",
@@ -32488,7 +32488,7 @@
         -0.025426745414733887,
         -0.0007908785482868552
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "8-21",
@@ -34035,7 +34035,7 @@
         -0.01622573658823967,
         0.0230164285749197
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "8-22",
@@ -35582,7 +35582,7 @@
         0.0022568616550415754,
         0.015405881218612194
       ],
-      "topic_id": null
+      "topic_id": 12
     },
     {
       "id": "8-23",
@@ -37129,7 +37129,7 @@
         -0.03104180097579956,
         0.006615128833800554
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "8-24",
@@ -38676,7 +38676,7 @@
         -0.04169536754488945,
         0.013267653994262218
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "8-25",
@@ -40223,7 +40223,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "8-26",
@@ -41770,7 +41770,7 @@
         -0.013489450328052044,
         -0.008671035058796406
       ],
-      "topic_id": null
+      "topic_id": 5
     },
     {
       "id": "8-27",
@@ -43317,7 +43317,7 @@
         -0.004404053557664156,
         0.002064484404399991
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "8-28",
@@ -44864,7 +44864,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "8-29",
@@ -46411,7 +46411,7 @@
         -0.011797072365880013,
         0.0037142576184123755
       ],
-      "topic_id": null
+      "topic_id": 5
     },
     {
       "id": "8-30",
@@ -47958,7 +47958,7 @@
         -0.022656621411442757,
         -0.002067008288577199
       ],
-      "topic_id": null
+      "topic_id": 5
     },
     {
       "id": "8-31",
@@ -49505,7 +49505,7 @@
         -0.028397539630532265,
         0.007441766560077667
       ],
-      "topic_id": null
+      "topic_id": -1
     },
     {
       "id": "8-32",
@@ -51052,7 +51052,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "8-33",
@@ -52599,7 +52599,7 @@
         -0.013494551181793213,
         0.007519789505749941
       ],
-      "topic_id": null
+      "topic_id": 6
     },
     {
       "id": "8-34",
@@ -54146,7 +54146,7 @@
         -0.02612573280930519,
         -0.0014784964732825756
       ],
-      "topic_id": null
+      "topic_id": 6
     },
     {
       "id": "8-35",
@@ -55693,7 +55693,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "8-36",
@@ -57240,7 +57240,7 @@
         -0.023056408390402794,
         0.004154485184699297
       ],
-      "topic_id": null
+      "topic_id": 6
     },
     {
       "id": "8-37",
@@ -58787,7 +58787,7 @@
         -0.029568299651145935,
         -0.010901636444032192
       ],
-      "topic_id": null
+      "topic_id": 6
     },
     {
       "id": "8-38",
@@ -60334,7 +60334,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "8-39",
@@ -61881,7 +61881,7 @@
         -0.026209814473986626,
         -0.005203567445278168
       ],
-      "topic_id": null
+      "topic_id": 6
     },
     {
       "id": "8-40",
@@ -63428,7 +63428,7 @@
         -0.019228998571634293,
         0.004372812807559967
       ],
-      "topic_id": null
+      "topic_id": 6
     },
     {
       "id": "8-41",
@@ -64975,7 +64975,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "8-42",
@@ -66522,7 +66522,7 @@
         -0.005036246497184038,
         -0.0024253842420876026
       ],
-      "topic_id": null
+      "topic_id": 6
     },
     {
       "id": "8-43",
@@ -68069,7 +68069,7 @@
         0.012611492536962032,
         0.0012442943407222629
       ],
-      "topic_id": null
+      "topic_id": 6
     },
     {
       "id": "8-44",
@@ -69616,7 +69616,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "8-45",
@@ -71163,7 +71163,7 @@
         -0.028623081743717194,
         0.004376954864710569
       ],
-      "topic_id": null
+      "topic_id": 2
     },
     {
       "id": "8-46",
@@ -72710,7 +72710,7 @@
         -0.04764727130532265,
         0.022695038467645645
       ],
-      "topic_id": null
+      "topic_id": 2
     },
     {
       "id": "8-47",
@@ -74257,7 +74257,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "8-48",
@@ -75804,7 +75804,7 @@
         -0.031089354306459427,
         -0.00676367525011301
       ],
-      "topic_id": null
+      "topic_id": 2
     },
     {
       "id": "8-49",
@@ -77351,7 +77351,7 @@
         -0.042122453451156616,
         0.009053468704223633
       ],
-      "topic_id": null
+      "topic_id": 2
     },
     {
       "id": "8-50",
@@ -78898,7 +78898,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "8-51",
@@ -80445,7 +80445,7 @@
         -0.022275075316429138,
         -0.037411727011203766
       ],
-      "topic_id": null
+      "topic_id": 5
     },
     {
       "id": "8-52",
@@ -81992,7 +81992,7 @@
         -0.022891955450177193,
         -0.04519219696521759
       ],
-      "topic_id": null
+      "topic_id": 5
     },
     {
       "id": "8-53",
@@ -83539,7 +83539,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "8-54",
@@ -85086,7 +85086,7 @@
         -0.004253872204571962,
         -0.014459685422480106
       ],
-      "topic_id": null
+      "topic_id": 5
     },
     {
       "id": "8-55",
@@ -86633,7 +86633,7 @@
         -0.038541339337825775,
         -0.027375517413020134
       ],
-      "topic_id": null
+      "topic_id": 5
     },
     {
       "id": "8-56",
@@ -88180,7 +88180,7 @@
         0.002283411333337426,
         0.01540151983499527
       ],
-      "topic_id": null
+      "topic_id": 13
     },
     {
       "id": "8-57",
@@ -89727,7 +89727,7 @@
         -0.019958138465881348,
         -0.018182246014475822
       ],
-      "topic_id": null
+      "topic_id": -1
     },
     {
       "id": "8-58",
@@ -91274,7 +91274,7 @@
         -0.01318012923002243,
         -0.026674319058656693
       ],
-      "topic_id": null
+      "topic_id": 8
     },
     {
       "id": "8-59",
@@ -92821,7 +92821,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "8-60",
@@ -94368,7 +94368,7 @@
         -0.007598232012242079,
         -0.020828720182180405
       ],
-      "topic_id": null
+      "topic_id": -1
     },
     {
       "id": "8-61",
@@ -95915,7 +95915,7 @@
         0.0007346103084273636,
         -0.03611215576529503
       ],
-      "topic_id": null
+      "topic_id": 8
     },
     {
       "id": "8-62",
@@ -97462,7 +97462,7 @@
         -0.03203260898590088,
         -0.004257338587194681
       ],
-      "topic_id": null
+      "topic_id": 9
     }
   ]
 }
