--- a/knowledge-base/structured-knowledge-base/documents/miljopartiet-valmanifest-2022.json
+++ b/knowledge-base/structured-knowledge-base/documents/miljopartiet-valmanifest-2022.json
@@ -1548,7 +1548,7 @@
         -0.05078733712434769,
         -0.03400147706270218
       ],
-      "topic_id": null
+      "topic_id": 9
     },
     {
       "id": "5-1",
@@ -3095,7 +3095,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "5-2",
@@ -4642,7 +4642,7 @@
         -0.017817670479416847,
         -0.009529693983495235
       ],
-      "topic_id": null
+      "topic_id": -1
     },
     {
       "id": "5-3",
@@ -6189,7 +6189,7 @@
         -0.013563696295022964,
         0.016171704977750778
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "5-4",
@@ -7736,7 +7736,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "5-5",
@@ -9283,7 +9283,7 @@
         -0.015192527323961258,
         0.018649864941835403
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "5-6",
@@ -10830,7 +10830,7 @@
         -0.023706283420324326,
         0.016551151871681213
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "5-7",
@@ -12377,7 +12377,7 @@
         0.002283411333337426,
         0.01540151983499527
       ],
-      "topic_id": null
+      "topic_id": 13
     },
     {
       "id": "5-8",
@@ -13924,7 +13924,7 @@
         -0.01001686044037342,
         0.010057765990495682
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "5-9",
@@ -15471,7 +15471,7 @@
         -0.017792576923966408,
         0.03590976074337959
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "5-10",
@@ -17018,7 +17018,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "5-11",
@@ -18565,7 +18565,7 @@
         -0.010807330720126629,
         -0.019822124391794205
       ],
-      "topic_id": null
+      "topic_id": 18
     },
     {
       "id": "5-12",
@@ -20112,7 +20112,7 @@
         -0.023536227643489838,
         -0.0016707653412595391
       ],
-      "topic_id": null
+      "topic_id": 2
     },
     {
       "id": "5-13",
@@ -21659,7 +21659,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "5-14",
@@ -23206,7 +23206,7 @@
         -0.010575318709015846,
         -0.015981800854206085
       ],
-      "topic_id": null
+      "topic_id": 14
     },
     {
       "id": "5-15",
@@ -24753,7 +24753,7 @@
         -0.03682839125394821,
         -0.018090471625328064
       ],
-      "topic_id": null
+      "topic_id": 5
     },
     {
       "id": "5-16",
@@ -26300,7 +26300,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "5-17",
@@ -27847,7 +27847,7 @@
         -0.022119062021374702,
         -0.002894605742767453
       ],
-      "topic_id": null
+      "topic_id": 5
     },
     {
       "id": "5-18",
@@ -29394,7 +29394,7 @@
         -0.02744777873158455,
         -0.005662622395902872
       ],
-      "topic_id": null
+      "topic_id": 5
     },
     {
       "id": "5-19",
@@ -30941,7 +30941,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "5-20",
@@ -32488,7 +32488,7 @@
         -0.018373148515820503,
         -0.004469610750675201
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "5-21",
@@ -34035,7 +34035,7 @@
         -0.02809617854654789,
         -0.00642183143645525
       ],
-      "topic_id": null
+      "topic_id": 3
     },
     {
       "id": "5-22",
@@ -35582,7 +35582,7 @@
         0.002264905720949173,
         0.01543017104268074
       ],
-      "topic_id": null
+      "topic_id": 12
     },
     {
       "id": "5-23",
@@ -37129,7 +37129,7 @@
         -0.009059456177055836,
         0.002019616076722741
       ],
-      "topic_id": null
+      "topic_id": 3
     },
     {
       "id": "5-24",
@@ -38676,7 +38676,7 @@
         -0.0098978066816926,
         -0.01408533938229084
       ],
-      "topic_id": null
+      "topic_id": 11
     },
     {
       "id": "5-25",
@@ -40223,7 +40223,7 @@
         -0.014545229263603687,
         -0.01652233488857746
       ],
-      "topic_id": null
+      "topic_id": 0
     }
   ]
 }
