--- a/knowledge-base/structured-knowledge-base/documents/moderaterna-valmanifest-2022.json
+++ b/knowledge-base/structured-knowledge-base/documents/moderaterna-valmanifest-2022.json
@@ -1548,7 +1548,7 @@
         -0.0267893485724926,
         -0.01513949315994978
       ],
-      "topic_id": null
+      "topic_id": 9
     },
     {
       "id": "2-1",
@@ -3095,7 +3095,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-2",
@@ -4642,7 +4642,7 @@
         -0.023656904697418213,
         -0.015798434615135193
       ],
-      "topic_id": null
+      "topic_id": 9
     },
     {
       "id": "2-3",
@@ -6189,7 +6189,7 @@
         -0.0331285335123539,
         -0.023189973086118698
       ],
-      "topic_id": null
+      "topic_id": -1
     },
     {
       "id": "2-4",
@@ -7736,7 +7736,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-5",
@@ -9283,7 +9283,7 @@
         -0.016243478283286095,
         -0.029721658676862717
       ],
-      "topic_id": null
+      "topic_id": 6
     },
     {
       "id": "2-6",
@@ -10830,7 +10830,7 @@
         -0.031133446842432022,
         -0.023933561518788338
       ],
-      "topic_id": null
+      "topic_id": 6
     },
     {
       "id": "2-7",
@@ -12377,7 +12377,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-8",
@@ -13924,7 +13924,7 @@
         -0.0005098927649669349,
         -0.0024350404273718596
       ],
-      "topic_id": null
+      "topic_id": 6
     },
     {
       "id": "2-9",
@@ -15471,7 +15471,7 @@
         -0.014140717685222626,
         -0.017790593206882477
       ],
-      "topic_id": null
+      "topic_id": 6
     },
     {
       "id": "2-10",
@@ -17018,7 +17018,7 @@
         -0.01724100299179554,
         -0.0014749959809705615
       ],
-      "topic_id": null
+      "topic_id": 6
     },
     {
       "id": "2-11",
@@ -18565,7 +18565,7 @@
         -0.021231533959507942,
         0.0036546082701534033
       ],
-      "topic_id": null
+      "topic_id": 6
     },
     {
       "id": "2-12",
@@ -20112,7 +20112,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-13",
@@ -21659,7 +21659,7 @@
         -0.024106794968247414,
         -0.001185992849059403
       ],
-      "topic_id": null
+      "topic_id": 6
     },
     {
       "id": "2-14",
@@ -23206,7 +23206,7 @@
         -0.03469947725534439,
         0.00533092487603426
       ],
-      "topic_id": null
+      "topic_id": 6
     },
     {
       "id": "2-15",
@@ -24753,7 +24753,7 @@
         -0.037782952189445496,
         -0.0027026981115341187
       ],
-      "topic_id": null
+      "topic_id": -1
     },
     {
       "id": "2-16",
@@ -26300,7 +26300,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-17",
@@ -27847,7 +27847,7 @@
         -0.013759136199951172,
         -0.018198279663920403
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "2-18",
@@ -29394,7 +29394,7 @@
         0.010245438665151596,
         -0.004979066550731659
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "2-19",
@@ -30941,7 +30941,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-20",
@@ -32488,7 +32488,7 @@
         -0.014747222885489464,
         0.002553880913183093
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "2-21",
@@ -34035,7 +34035,7 @@
         -0.014244228601455688,
         -0.0030754583422094584
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "2-22",
@@ -35582,7 +35582,7 @@
         -0.017482349649071693,
         0.03564511612057686
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "2-23",
@@ -37129,7 +37129,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-24",
@@ -38676,7 +38676,7 @@
         -0.02635529823601246,
         -0.006090328097343445
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "2-25",
@@ -40223,7 +40223,7 @@
         -0.015808215364813805,
         0.015101208351552486
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "2-26",
@@ -41770,7 +41770,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-27",
@@ -43317,7 +43317,7 @@
         -0.009663566946983337,
         -0.0030711169820278883
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "2-28",
@@ -44864,7 +44864,7 @@
         -0.026984835043549538,
         0.00989443901926279
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "2-29",
@@ -46411,7 +46411,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-30",
@@ -47958,7 +47958,7 @@
         -0.009816999547183514,
         -0.00807227287441492
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "2-31",
@@ -49505,7 +49505,7 @@
         -0.018954722210764885,
         0.002274215454235673
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "2-32",
@@ -51052,7 +51052,7 @@
         -0.021306490525603294,
         0.025584442541003227
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "2-33",
@@ -52599,7 +52599,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-34",
@@ -54146,7 +54146,7 @@
         -0.03438541665673256,
         0.004981729667633772
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "2-35",
@@ -55693,7 +55693,7 @@
         -0.01874999701976776,
         0.023519540205597878
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "2-36",
@@ -57240,7 +57240,7 @@
         -0.006311887875199318,
         0.016723299399018288
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "2-37",
@@ -58787,7 +58787,7 @@
         -0.03262866288423538,
         0.024254746735095978
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "2-38",
@@ -60334,7 +60334,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-39",
@@ -61881,7 +61881,7 @@
         -0.016340194270014763,
         0.008946925401687622
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "2-40",
@@ -63428,7 +63428,7 @@
         -0.03180408477783203,
         0.025202039629220963
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "2-41",
@@ -64975,7 +64975,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-42",
@@ -66522,7 +66522,7 @@
         -0.02281089313328266,
         0.00007461258064722642
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "2-43",
@@ -68069,7 +68069,7 @@
         0.004676903132349253,
         0.017157677561044693
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "2-44",
@@ -69616,7 +69616,7 @@
         -0.037224479019641876,
         0.00561096565797925
       ],
-      "topic_id": null
+      "topic_id": 11
     },
     {
       "id": "2-45",
@@ -71163,7 +71163,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-46",
@@ -72710,7 +72710,7 @@
         -0.027763307094573975,
         0.010632526129484177
       ],
-      "topic_id": null
+      "topic_id": 11
     },
     {
       "id": "2-47",
@@ -74257,7 +74257,7 @@
         -0.020835435017943382,
         0.002242119750007987
       ],
-      "topic_id": null
+      "topic_id": 11
     },
     {
       "id": "2-48",
@@ -75804,7 +75804,7 @@
         -0.03956357762217522,
         -0.018355481326580048
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "2-49",
@@ -77351,7 +77351,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-50",
@@ -78898,7 +78898,7 @@
         -0.02203192748129368,
         -0.02449537254869938
       ],
-      "topic_id": null
+      "topic_id": 3
     },
     {
       "id": "2-51",
@@ -80445,7 +80445,7 @@
         -0.018670450896024704,
         -0.004146904218941927
       ],
-      "topic_id": null
+      "topic_id": 3
     },
     {
       "id": "2-52",
@@ -81992,7 +81992,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-53",
@@ -83539,7 +83539,7 @@
         -0.012779079377651215,
         0.001835215138271451
       ],
-      "topic_id": null
+      "topic_id": 3
     },
     {
       "id": "2-54",
@@ -85086,7 +85086,7 @@
         -0.014276079833507538,
         -0.002271973993629217
       ],
-      "topic_id": null
+      "topic_id": 3
     },
     {
       "id": "2-55",
@@ -86633,7 +86633,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-56",
@@ -88180,7 +88180,7 @@
         0.002822345355525613,
         -0.003514466341584921
       ],
-      "topic_id": null
+      "topic_id": 3
     },
     {
       "id": "2-57",
@@ -89727,7 +89727,7 @@
         -0.003898829221725464,
         0.02301996573805809
       ],
-      "topic_id": null
+      "topic_id": -1
     },
     {
       "id": "2-58",
@@ -91274,7 +91274,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-59",
@@ -92821,7 +92821,7 @@
         -0.02783462591469288,
         0.01470200065523386
       ],
-      "topic_id": null
+      "topic_id": 2
     },
     {
       "id": "2-60",
@@ -94368,7 +94368,7 @@
         -0.01783342845737934,
         0.01817498542368412
       ],
-      "topic_id": null
+      "topic_id": 2
     },
     {
       "id": "2-61",
@@ -95915,7 +95915,7 @@
         0.002289197873324156,
         0.015424071811139584
       ],
-      "topic_id": null
+      "topic_id": 13
     },
     {
       "id": "2-62",
@@ -97462,7 +97462,7 @@
         -0.05982372537255287,
         0.009273507632315159
       ],
-      "topic_id": null
+      "topic_id": 2
     },
     {
       "id": "2-63",
@@ -99009,7 +99009,7 @@
         -0.033567339181900024,
         0.01573970913887024
       ],
-      "topic_id": null
+      "topic_id": 2
     },
     {
       "id": "2-64",
@@ -100556,7 +100556,7 @@
         0.002283411333337426,
         0.01540151983499527
       ],
-      "topic_id": null
+      "topic_id": 13
     },
     {
       "id": "2-65",
@@ -102103,7 +102103,7 @@
         -0.020188163965940475,
         -0.0003752649063244462
       ],
-      "topic_id": null
+      "topic_id": 2
     },
     {
       "id": "2-66",
@@ -103650,7 +103650,7 @@
         -0.010511010885238647,
         -0.018933463841676712
       ],
-      "topic_id": null
+      "topic_id": 2
     },
     {
       "id": "2-67",
@@ -105197,7 +105197,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-68",
@@ -106744,7 +106744,7 @@
         -0.016648726537823677,
         -0.03066929429769516
       ],
-      "topic_id": null
+      "topic_id": 8
     },
     {
       "id": "2-69",
@@ -108291,7 +108291,7 @@
         -0.03684414178133011,
         -0.01681598834693432
       ],
-      "topic_id": null
+      "topic_id": 8
     },
     {
       "id": "2-70",
@@ -109838,7 +109838,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-71",
@@ -111385,7 +111385,7 @@
         -0.027766047045588493,
         -0.0366908460855484
       ],
-      "topic_id": null
+      "topic_id": 8
     },
     {
       "id": "2-72",
@@ -112932,7 +112932,7 @@
         -0.020004170015454292,
         -0.01540733128786087
       ],
-      "topic_id": null
+      "topic_id": 8
     },
     {
       "id": "2-73",
@@ -114479,7 +114479,7 @@
         -0.016965162009000778,
         -0.015952613204717636
       ],
-      "topic_id": null
+      "topic_id": 8
     },
     {
       "id": "2-74",
@@ -116026,7 +116026,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-75",
@@ -117573,7 +117573,7 @@
         -0.0359620563685894,
         0.021305616945028305
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "2-76",
@@ -119120,7 +119120,7 @@
         -0.039206668734550476,
         0.008803500793874264
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "2-77",
@@ -120667,7 +120667,7 @@
         -0.01326333824545145,
         -0.0035046760458499193
       ],
-      "topic_id": null
+      "topic_id": 18
     },
     {
       "id": "2-78",
@@ -122214,7 +122214,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-79",
@@ -123761,7 +123761,7 @@
         -0.029008664190769196,
         -0.03739077225327492
       ],
-      "topic_id": null
+      "topic_id": 5
     },
     {
       "id": "2-80",
@@ -125308,7 +125308,7 @@
         -0.021190689876675606,
         -0.0174015574157238
       ],
-      "topic_id": null
+      "topic_id": 5
     },
     {
       "id": "2-81",
@@ -126855,7 +126855,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "2-82",
@@ -128402,7 +128402,7 @@
         -0.029108187183737755,
         -0.01437754649668932
       ],
-      "topic_id": null
+      "topic_id": 5
     },
     {
       "id": "2-83",
@@ -129949,7 +129949,7 @@
         -0.04063338413834572,
         -0.014692925848066807
       ],
-      "topic_id": null
+      "topic_id": 5
     },
     {
       "id": "2-84",
@@ -131496,7 +131496,7 @@
         -0.01123898010700941,
         0.026466742157936096
       ],
-      "topic_id": null
+      "topic_id": 0
     }
   ]
 }
