--- a/knowledge-base/structured-knowledge-base/documents/socialdemokraterna-valmanifest-2022.json
+++ b/knowledge-base/structured-knowledge-base/documents/socialdemokraterna-valmanifest-2022.json
@@ -1548,7 +1548,7 @@
         -0.014057930558919907,
         -0.021360069513320923
       ],
-      "topic_id": null
+      "topic_id": 9
     },
     {
       "id": "6-1",
@@ -3095,7 +3095,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "6-2",
@@ -4642,7 +4642,7 @@
         -0.02479076199233532,
         -0.007536730729043484
       ],
-      "topic_id": null
+      "topic_id": 9
     },
     {
       "id": "6-3",
@@ -6189,7 +6189,7 @@
         -0.01053297147154808,
         -0.02847035974264145
       ],
-      "topic_id": null
+      "topic_id": 9
     },
     {
       "id": "6-4",
@@ -7736,7 +7736,7 @@
         -0.007587744854390621,
         0.008603960275650024
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "6-5",
@@ -9283,7 +9283,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "6-6",
@@ -10830,7 +10830,7 @@
         -0.021099505946040154,
         -0.0005554831586778164
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "6-7",
@@ -12377,7 +12377,7 @@
         0.0017497846856713295,
         0.0047180126421153545
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "6-8",
@@ -13924,7 +13924,7 @@
         -0.010414426214993,
         -0.01853974163532257
       ],
-      "topic_id": null
+      "topic_id": 11
     },
     {
       "id": "6-9",
@@ -15471,7 +15471,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "6-10",
@@ -17018,7 +17018,7 @@
         0.00736932922154665,
         -0.0195997953414917
       ],
-      "topic_id": null
+      "topic_id": 2
     },
     {
       "id": "6-11",
@@ -18565,7 +18565,7 @@
         -0.006930788047611713,
         -0.00011240066669415683
       ],
-      "topic_id": null
+      "topic_id": 2
     },
     {
       "id": "6-12",
@@ -20112,7 +20112,7 @@
         -0.00888352282345295,
         0.002490078331902623
       ],
-      "topic_id": null
+      "topic_id": 2
     },
     {
       "id": "6-13",
@@ -21659,7 +21659,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "6-14",
@@ -23206,7 +23206,7 @@
         0.006329202558845282,
         -0.006143828388303518
       ],
-      "topic_id": null
+      "topic_id": 2
     },
     {
       "id": "6-15",
@@ -24753,7 +24753,7 @@
         -0.016849253326654434,
         -0.012572955340147018
       ],
-      "topic_id": null
+      "topic_id": 14
     },
     {
       "id": "6-16",
@@ -26300,7 +26300,7 @@
         0.00045803343527950346,
         0.00527814170345664
       ],
-      "topic_id": null
+      "topic_id": 2
     },
     {
       "id": "6-17",
@@ -27847,7 +27847,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "6-18",
@@ -29394,7 +29394,7 @@
         0.010327635332942009,
         -0.007260228041559458
       ],
-      "topic_id": null
+      "topic_id": -1
     },
     {
       "id": "6-19",
@@ -30941,7 +30941,7 @@
         -0.030408628284931183,
         0.021958274766802788
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "6-20",
@@ -32488,7 +32488,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "6-21",
@@ -34035,7 +34035,7 @@
         -0.01538462471216917,
         0.010763950645923615
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "6-22",
@@ -35582,7 +35582,7 @@
         0.00583080668002367,
         0.019229937344789505
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "6-23",
@@ -37129,7 +37129,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "6-24",
@@ -38676,7 +38676,7 @@
         -0.000589476665481925,
         0.002188673010095954
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "6-25",
@@ -40223,7 +40223,7 @@
         -0.008544111624360085,
         -0.008490877225995064
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "6-26",
@@ -41770,7 +41770,7 @@
         0.002283411333337426,
         0.01540151983499527
       ],
-      "topic_id": null
+      "topic_id": 13
     },
     {
       "id": "6-27",
@@ -43317,7 +43317,7 @@
         0.025738324970006943,
         -0.007896541617810726
       ],
-      "topic_id": null
+      "topic_id": -1
     },
     {
       "id": "6-28",
@@ -44864,7 +44864,7 @@
         -0.03663688898086548,
         -0.017998935654759407
       ],
-      "topic_id": null
+      "topic_id": -1
     },
     {
       "id": "6-29",
@@ -46411,7 +46411,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "6-30",
@@ -47958,7 +47958,7 @@
         -0.012700988911092281,
         -0.00769602507352829
       ],
-      "topic_id": null
+      "topic_id": 3
     },
     {
       "id": "6-31",
@@ -49505,7 +49505,7 @@
         0.0020729892421513796,
         0.006741633638739586
       ],
-      "topic_id": null
+      "topic_id": 3
     },
     {
       "id": "6-32",
@@ -51052,7 +51052,7 @@
         -0.021223533898591995,
         -0.012318962253630161
       ],
-      "topic_id": null
+      "topic_id": 3
     }
   ]
 }
