--- a/knowledge-base/structured-knowledge-base/documents/liberalerna-valmanifest-2022.json
+++ b/knowledge-base/structured-knowledge-base/documents/liberalerna-valmanifest-2022.json
@@ -1548,7 +1548,7 @@
         -0.05308660864830017,
         -0.005962548311799765
       ],
-      "topic_id": null
+      "topic_id": 9
     },
     {
       "id": "12-1",
@@ -3095,7 +3095,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "12-2",
@@ -4642,7 +4642,7 @@
         -0.03836013376712799,
         -0.005616047885268927
       ],
-      "topic_id": null
+      "topic_id": -1
     },
     {
       "id": "12-3",
@@ -6189,7 +6189,7 @@
         -0.04799322783946991,
         -0.00297665991820395
       ],
-      "topic_id": null
+      "topic_id": -1
     },
     {
       "id": "12-4",
@@ -7736,7 +7736,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "12-5",
@@ -9283,7 +9283,7 @@
         -0.03570706769824028,
         -0.009754633530974388
       ],
-      "topic_id": null
+      "topic_id": -1
     },
     {
       "id": "12-6",
@@ -10830,7 +10830,7 @@
         -0.03971271589398384,
         0.014228250831365585
       ],
-      "topic_id": null
+      "topic_id": 10
     },
     {
       "id": "12-7",
@@ -12377,7 +12377,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "12-8",
@@ -13924,7 +13924,7 @@
         -0.036567047238349915,
         -0.03207981213927269
       ],
-      "topic_id": null
+      "topic_id": 8
     },
     {
       "id": "12-9",
@@ -15471,7 +15471,7 @@
         -0.025351250544190407,
         -0.02146071195602417
       ],
-      "topic_id": null
+      "topic_id": 8
     },
     {
       "id": "12-10",
@@ -17018,7 +17018,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "12-11",
@@ -18565,7 +18565,7 @@
         -0.018244393169879913,
         -0.01617555133998394
       ],
-      "topic_id": null
+      "topic_id": 8
     },
     {
       "id": "12-12",
@@ -20112,7 +20112,7 @@
         -0.008076315745711327,
         -0.00884298887103796
       ],
-      "topic_id": null
+      "topic_id": 8
     },
     {
       "id": "12-13",
@@ -21659,7 +21659,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "12-14",
@@ -23206,7 +23206,7 @@
         -0.030583152547478676,
         -0.011845438741147518
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "12-15",
@@ -24753,7 +24753,7 @@
         -0.029077569022774696,
         -0.0013288211775943637
       ],
-      "topic_id": null
+      "topic_id": -1
     },
     {
       "id": "12-16",
@@ -26300,7 +26300,7 @@
         -0.024288369342684746,
         -0.012165087275207043
       ],
-      "topic_id": null
+      "topic_id": -1
     },
     {
       "id": "12-17",
@@ -27847,7 +27847,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "12-18",
@@ -29394,7 +29394,7 @@
         -0.017878791317343712,
         0.004831820260733366
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "12-19",
@@ -30941,7 +30941,7 @@
         -0.02085772715508938,
         0.006115272641181946
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "12-20",
@@ -32488,7 +32488,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "12-21",
@@ -34035,7 +34035,7 @@
         -0.01960643380880356,
         0.007380863185971975
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "12-22",
@@ -35582,7 +35582,7 @@
         -0.020254965871572495,
         0.011174093000590801
       ],
-      "topic_id": null
+      "topic_id": 7
     },
     {
       "id": "12-23",
@@ -37129,7 +37129,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "12-24",
@@ -38676,7 +38676,7 @@
         -0.022509856149554253,
         0.015196794643998146
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "12-25",
@@ -40223,7 +40223,7 @@
         -0.012469705194234848,
         0.021759362891316414
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "12-26",
@@ -41770,7 +41770,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "12-27",
@@ -43317,7 +43317,7 @@
         0.003959293477237225,
         0.01390787959098816
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "12-28",
@@ -44864,7 +44864,7 @@
         0.01599356159567833,
         0.007495766039937735
       ],
-      "topic_id": null
+      "topic_id": 1
     },
     {
       "id": "12-29",
@@ -46411,7 +46411,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "12-30",
@@ -47958,7 +47958,7 @@
         -0.025978464633226395,
         -0.009718220680952072
       ],
-      "topic_id": null
+      "topic_id": 6
     },
     {
       "id": "12-31",
@@ -49505,7 +49505,7 @@
         -0.007111900020390749,
         0.009554262273013592
       ],
-      "topic_id": null
+      "topic_id": 6
     },
     {
       "id": "12-32",
@@ -51052,7 +51052,7 @@
         0.002283411333337426,
         0.01540151983499527
       ],
-      "topic_id": null
+      "topic_id": 13
     },
     {
       "id": "12-33",
@@ -52599,7 +52599,7 @@
         0.0006796223460696638,
         0.018653610721230507
       ],
-      "topic_id": null
+      "topic_id": 6
     },
     {
       "id": "12-34",
@@ -54146,7 +54146,7 @@
         -0.01537051610648632,
         0.00011907376756425947
       ],
-      "topic_id": null
+      "topic_id": 18
     },
     {
       "id": "12-35",
@@ -55693,7 +55693,7 @@
         0.0022844651248306036,
         0.015411138534545898
       ],
-      "topic_id": null
+      "topic_id": 12
     },
     {
       "id": "12-36",
@@ -57240,7 +57240,7 @@
         -0.02457570843398571,
         0.01285839919000864
       ],
-      "topic_id": null
+      "topic_id": 2
     },
     {
       "id": "12-37",
@@ -58787,7 +58787,7 @@
         -0.04812750220298767,
         0.016568811610341072
       ],
-      "topic_id": null
+      "topic_id": 2
     },
     {
       "id": "12-38",
@@ -60334,7 +60334,7 @@
         -0.026399603113532066,
         0.016593387350440025
       ],
-      "topic_id": null
+      "topic_id": 2
     },
     {
       "id": "12-39",
@@ -61881,7 +61881,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "12-40",
@@ -63428,7 +63428,7 @@
         -0.04735618457198143,
         -0.04609862342476845
       ],
-      "topic_id": null
+      "topic_id": 5
     },
     {
       "id": "12-41",
@@ -64975,7 +64975,7 @@
         -0.009456600993871689,
         -0.017705770209431648
       ],
-      "topic_id": null
+      "topic_id": 14
     },
     {
       "id": "12-42",
@@ -66522,7 +66522,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "12-43",
@@ -68069,7 +68069,7 @@
         -0.031171420589089394,
         -0.001059394096955657
       ],
-      "topic_id": null
+      "topic_id": 5
     },
     {
       "id": "12-44",
@@ -69616,7 +69616,7 @@
         -0.022286953404545784,
         -0.001832529902458191
       ],
-      "topic_id": null
+      "topic_id": -1
     },
     {
       "id": "12-45",
@@ -71163,7 +71163,7 @@
         0.00225142203271389,
         0.015441752970218658
       ],
-      "topic_id": null
+      "topic_id": 0
     },
     {
       "id": "12-46",
@@ -72710,7 +72710,7 @@
         -0.016884826123714447,
         -0.01542576216161251
       ],
-      "topic_id": null
+      "topic_id": 3
     },
     {
       "id": "12-47",
@@ -74257,7 +74257,7 @@
         -0.043934233486652374,
         0.0025302828289568424
       ],
-      "topic_id": null
+      "topic_id": 3
     },
     {
       "id": "12-48",
@@ -75804,7 +75804,7 @@
         -0.012044006027281284,
         0.014079472981393337
       ],
-      "topic_id": null
+      "topic_id": 3
     }
   ]
 }
