--- a/knowledge-base/pyproject.toml
+++ b/knowledge-base/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "spacy>=3.8.7",
     "pip>=25.1.1",
+    "neo4j>=5.28.1",
 ]
 
 [dependency-groups]
