Update dependencies in package.json and bun.lock, add new API route for chat functionality, and implement chat state management with hooks. Enhance chat area component to handle AI responses and loading states. Introduce Gemini and Neo4j services for context-aware responses, and add error handling for API interactions.

--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "test-enrich-voteringar": "cd commands && bun install && bun run test-enrich-voteringar"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
+    "neo4j-driver": "^5.28.1",
     "next": "15.3.2",
+    "openai": "^4.103.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0"
