--- a/.github/workflows/update-knowledge-graph.yml
+++ b/.github/workflows/update-knowledge-graph.yml
@@ -26,6 +26,9 @@ jobs:
           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
         shell: bash
 
+      - name: Create virtual environment
+        run: uv venv
+
       - name: Install dependencies
         run: uv pip install .
 
