Update .gitignore to exclude build artifacts and egg-info for knowledge base, and add package definitions in pyproject.toml for setuptools.

--- a/knowledge-base/pyproject.toml
+++ b/knowledge-base/pyproject.toml
@@ -27,3 +27,6 @@ dev = [
     "pytest>=8.3.5",
     "pytest-asyncio>=1.0.0",
 ]
+
+[tool.setuptools]
+packages = ["analysis", "documents", "graph", "model", "parser", "util", "tests"]
