--- a/.env.dist
+++ b/.env.dist
@@ -3,3 +3,5 @@ OPENAI_API_KEY=x
 NEO4J_USERNAME=x
 NEO4J_PASSWORD=x
 NEO4J_URI=neo4j://localhost:7687
+POSTHOG_API_KEY=
+POSTHOG_HOST=https://eu.i.posthog.com
